force-app/main/default/objects/AssetAndLiability__c/AssetAndLiability__c.object-meta.xml
<CustomObject>
    <description>Object to save asset and liability information of the applicant</description>
    <label>Asset And Liability</label>
    <nameField>
        <label>Asset And Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Asset And Liabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>