force-app/main/default/objects/AssetAndLiability__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>Account number of account type selected</description>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>