force-app/main/default/objects/AssetAndLiability__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>Account Type of asset and liability</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Money Market</fullName>
            </value>
            <value>
                <fullName>Certificate of Deposit</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Stocks</fullName>
            </value>
            <value>
                <fullName>Stock Options</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Bridge Loan Proceeds</fullName>
            </value>
            <value>
                <fullName>Individual Development Account</fullName>
            </value>
            <value>
                <fullName>Trust Account</fullName>
            </value>
            <value>
                <fullName>Cash Value of Life Insurance</fullName>
            </value>
            <value>
                <fullName>Revolving</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>Open 30-Day</fullName>
            </value>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>