force-app/main/default/objects/AssetAndLiability__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Asset belongs to which applicant</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Asset And Liabilities</relationshipLabel>
    <relationshipName>AssetAndLiabilities</relationshipName>
    <type>Lookup</type>
</CustomField>