force-app/main/default/objects/AssetAndLiability__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>AssetAndLiability__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>