force-app/main/default/objects/AssetAndLiability__c/fields/AssetOrCreditType__c.field-meta.xml
<CustomField>
    <fullName>AssetOrCreditType__c</fullName>
    <description>Asset Or Credit Type</description>
    <label>Asset Or Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proceeds from Real Estate Property to be sold on or before closing</fullName>
                <default>true</default>
                <label>Proceeds from Real Estate Property to be sold on or before closing</label>
            </value>
            <value>
                <fullName>Proceeds from Sale of Non-Real Estate Asset</fullName>
            </value>
            <value>
                <fullName>Secured Borrowed Funds</fullName>
            </value>
            <value>
                <fullName>Unsecured Borrowed Funds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Earnest Money</fullName>
            </value>
            <value>
                <fullName>Employer Assistance</fullName>
            </value>
            <value>
                <fullName>Lot Equity</fullName>
            </value>
            <value>
                <fullName>Relocation Funds</fullName>
            </value>
            <value>
                <fullName>Rent Credit</fullName>
            </value>
            <value>
                <fullName>Sweat Equity</fullName>
            </value>
            <value>
                <fullName>Trade Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>