force-app/main/default/objects/AssetAndLiability__c/fields/CreditorName__c.field-meta.xml
<CustomField>
    <fullName>CreditorName__c</fullName>
    <description>Creditor Name of Mortgage</description>
    <label>Creditor Name of Mortgage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>