force-app/main/default/objects/AssetAndLiability__c/fields/FinancialInstitutionName__c.field-meta.xml
<CustomField>
    <fullName>FinancialInstitutionName__c</fullName>
    <description>Financial Institution Name or Creditor Name for the property</description>
    <label>FinancialInstitutionName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>