force-app/main/default/objects/AssetAndLiability__c/fields/HasMortgage__c.field-meta.xml
<CustomField>
    <fullName>HasMortgage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has Mortgage on Property</description>
    <label>Has Mortgage?</label>
    <type>Checkbox</type>
</CustomField>