force-app/main/default/objects/AssetAndLiability__c/fields/LienType__c.field-meta.xml
<CustomField>
    <fullName>LienType__c</fullName>
    <label>Lien Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Lien</fullName>
            </value>
            <value>
                <fullName>Subordinate Lien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>