force-app/main/default/objects/AssetAndLiability__c/fields/LoanDrawnAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanDrawnAmount__c</fullName>
    <description>Loan amount to be drawn</description>
    <label>LoanDrawnAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>