force-app/main/default/objects/AssetAndLiability__c/fields/MarketValue__c.field-meta.xml
<CustomField>
    <fullName>MarketValue__c</fullName>
    <description>Market value of the asset or liability</description>
    <label>Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>