force-app/main/default/objects/AssetAndLiability__c/fields/MonthlyPayment__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPayment__c</fullName>
    <description>Month Payment against the property</description>
    <label>Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>