force-app/main/default/objects/AssetAndLiability__c/fields/MortgageType__c.field-meta.xml
<CustomField>
    <fullName>MortgageType__c</fullName>
    <label>Mortgage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FHA</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>USDA-RD</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Conventional,</fullName>
                <isActive>false</isActive>
                <label>Conventional,</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>