force-app/main/default/objects/AssetAndLiability__c/fields/OtherLiabilitiesOrExpenses__c.field-meta.xml
<CustomField>
    <fullName>OtherLiabilitiesOrExpenses__c</fullName>
    <description>Other Liabilities Or Expenses</description>
    <label>Other Liabilities Or Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alimony</fullName>
            </value>
            <value>
                <fullName>Child Support</fullName>
            </value>
            <value>
                <fullName>Separate Maintenance</fullName>
            </value>
            <value>
                <fullName>Job Related Expenses</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>