force-app/main/default/objects/AssetAndLiability__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Liabilities of property</description>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Liabilities</relationshipLabel>
    <relationshipName>Liabilities</relationshipName>
    <type>Lookup</type>
</CustomField>