force-app/main/default/objects/AssetAndLiability__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <description>Type of asset and iability</description>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Accounts</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Other Accounts</fullName>
            </value>
            <value>
                <fullName>Other Assets</fullName>
            </value>
            <value>
                <fullName>Other Credits</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Other Debts</fullName>
            </value>
            <value>
                <fullName>Leases</fullName>
            </value>
            <value>
                <fullName>Other Liabilities</fullName>
            </value>
            <value>
                <fullName>Expenses</fullName>
            </value>
            <value>
                <fullName>Credits</fullName>
                <isActive>false</isActive>
                <label>Credits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>