force-app/main/default/objects/AssetAndLiability__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of asset and iability</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asset</fullName>
                <default>true</default>
                <label>Asset</label>
            </value>
            <value>
                <fullName>Liability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>