force-app/main/default/objects/AssetAndLiability__c/fields/UnpaidBalance__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalance__c</fullName>
    <description>Unpaid balance of the mortgage</description>
    <label>UnpaidBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>